[package]
name = "sdl-wfc"
version = "0.1.0"
authors = ["max-lv <2048terrabit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
version = "0.34.4"
features = ["image", "gfx", "ttf"]

[dependencies]
rand = "0.8.3"
better-panic = "*"
signal-hook = "*"

[profile.release]
debug = 1
